Remove right padding from 'About NTX' dropdown to prevent the 'Go' button from wrapping to the bottom

--- a/public_html/css/custom-sections.css
+++ b/public_html/css/custom-sections.css
@@ -881,6 +881,8 @@
 .aboutntx-outer .dropdowns {
   text-align:left;
   padding-left: 5%;
+  padding-right: 0;
+
 }
 
 #aboutNTX h4 {
